# drishti

./: .env.example  .env.free-tier  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  AWS_DEPLOYMENT_GUIDE.md  AWS_QUICK_FIX.sh  AZURE_DEPLOYMENT.sh  BACKEND_PROGRESS_REPORT.md  BACKUP_AND_DR_STRATEGY.md  COMPLETE_SYSTEM_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_PHASE_2.md  DEPLOYMENT_READINESS_CHECKLIST.md  DEPLOYMENT_STATUS.md  DRISHTI_FINAL_VISION.md  DRISHTI_TECHNICAL_ARCHITECTURE.md  Dockerfile  Dockerfile.frontend  Dockerfile.producer  ELK_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  LOAD_TESTING_GUIDE.md  MVP_COMPLETION_REPORT.md  MVP_DEPLOY_GUIDE.md  Makefile  PHASE_1_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_5_ML_TRAINING_COMPLETION.md  PHASE_3_CHECKPOINT.md  PHASE_4_ENSEMBLE_COMPLETION.md  PHASE_5_2_COMPLETION_REPORT.md  PHASE_5_3_COMPLETION_REPORT.md  PHASE_5_4_COMPLETION_REPORT.md  PHASE_5_COMPLETE_SUMMARY.md  PHASE_5_DELIVERABLES_MANIFEST.md  PHASE_5_EXECUTIVE_SUMMARY.md  PRODUCTION_README.md  QUICKSTART.md  README.md  (+52 more)
.github/workflows/: build-push.yml  ci.yml  debug.yml  deploy-aws.yml  deploy-render.yml  deploy.yml  drishti_ci.yml  production-pipeline.yml  test-lint.yml
backend/: main_app.py
backend/alerts/: ai_engine.py  drishti_master.pem  engine.py  keygen.py  realtime_dispatcher.py
backend/api/: alert_reasoning.py  cascade_viz.py  data_endpoints.py  inference_router.py  observability.py  schemas.py  server.py  simulation.py  state.py  trains_router.py
backend/core/: __init__.py  audit.py  errors.py  tracing.py
backend/data/: __init__.py  accident_window_extractor.py  accidents_template.csv  augmentation.py  cleaning.py  crs_loader.py  crs_parser.py  data_quality.py  kfold_split_manager.py  load_trains.py  negative_sampling.py  ntes_connector.py  ntes_live.py  ntes_live_real.py  osint_engine.py  phase1_ingestion.py  quality_checker.py  real_feed_connector.py  timeseries_dataset.py  train_repository.py  weather_connector.py
backend/db/: __init__.py  migrations.py  models.py  session.py
backend/devops/: telemetry_producer.py
backend/driver/: mobile_app.py
backend/features/: compute.py  engineering.py  store.py  timeseries_features.py
backend/graph/: railway_graph_builder.py
backend/hud/: protocol.py
backend/inference/: config.py  engine.py  ml_integration.py  streaming.py
backend/integration/: distribution.py  pipeline.py
backend/ml/: __init__.py  ab_test.py  anomaly_detector.py  config.py  (+21 more)
deployment/: kubernetes-production.yml  kubernetes.yml  prometheus.yml
docs/: DEVOPS_FREE_TIER_PLAN.md  PROJECT_DEEP_DIVE.md  SYSTEM_ARCHITECTURE_REVIEW.md
elk/: apm-server.yml  elasticsearch.yml  filebeat.yml  kibana.yml  logstash.conf  metricbeat.yml
frontend/: package-lock.json  package.json  vite.config.js
models/: isolation_forest_latest.pkl
nginx/: nginx.conf
scripts/: fix_migration_004.py  generate_graph.py  seed_db.py  setup_aws_backend.sh
terraform/: .terraform.lock.hcl  README.md  backend-config.hcl  compute.tf  database.tf  loadbalancer.tf  main.tf  networking.tf  outputs.tf  prod.tfvars  staging.tfvars  variables.tf
test_checkpoints/: model_best.pt
tests/: load_test.py  locustfile.conf  test_api.py  test_cascade.py  test_data_api_endpoints.py  test_data_integration.py  test_data_quality_and_realtime.py  test_intelligence.py  test_phase1_ingestion.py  test_phase3_ml_runtime.py  test_production_data_stack.py  test_security_hardening.py  test_train_repository.py
(+56 files in other folders)
